--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# The static project data that the LLM is working with.
+projects
+
 # The directory Mix will write compiled artifacts to.
 /_build/
 
