--- a/fly.toml
+++ b/fly.toml
@@ -30,5 +30,5 @@ swap_size_mb = 512
     soft_limit = 1000
 
 [mounts]
-  source="projects"
-  destination="/projects"
+  source="_projects"
+  destination="/_projects"
